# classroom-control-plasmoid

./: CMakeLists.txt  README.md
applets/: CMakeLists.txt
applets/classroomcontrol/: CMakeLists.txt
applets/classroomcontrol/icons/: .sclassroom_control_cart_93vg  .sclassroom_control_cart_96vg
applets/classroomcontrol/knotifications5/: classroomcontrol.notifyrc
applets/classroomcontrol/knotifications6/: classroomcontrol.notifyrc
applets/classroomcontrol/package/: metadata.desktop  metadata.json
applets/classroomcontrol/package/contents/ui/: ControlView.qml  ControlView_v2.qml  InfoView.qml  InfoView_v2.qml  classroom-control-dialog.qml  main.qml
applets/classroomcontrol/plugin/: ClassroomControlWidget.cpp  ClassroomControlWidget.h  ClassroomControlWidgetAdaptor.cpp  ClassroomControlWidgetAdaptor.h  ClassroomControlWidgetUtils.cpp  ClassroomControlWidgetUtils.h  plugin.cpp  plugin.h  qmldir
applets/classroomcontrol/warning/: classroom-control-dialog.py
debian/: changelog  classroom-control-plasmoid.dirs  classroom-control-plasmoid.install  classroom-control-plasmoid.postinst  classroom-control-plasmoid.postrm  classroom-control-plasmoid.prerm  control  rules
llx-resources/classroom-control-plasmoid/desktops/: classroom-control.desktop
po/: plasma_applet_org.kde.plasma.classroomcontrol.pot  update_translations.sh
po/ca/: plasma_applet_org.kde.plasma.classroomcontrol.po
po/ca@valencia/: plasma_applet_org.kde.plasma.classroomcontrol.po
po/en_GB/: plasma_applet_org.kde.plasma.classroomcontrol.po
po/es/: plasma_applet_org.kde.plasma.classroomcontrol.po
